# noctalia

./: example.toml  meson.build  meson_options.txt
.github/workflows/: cachix.yml
assets/translations/: be.json  ca.json  cs.json  de.json  en.json  es.json  fr.json  gl-ES.json  hu.json  it.json  ku.json  nl.json  nn.json  pl.json  pt-BR.json  ru.json  sv.json  tr.json  uk-UA.json  vi.json  zh-Hans.json
nix/: package.nix
src/: main.cpp
src/app/: application.cpp  application.h  application_plugins.cpp  application_services.cpp  application_ui.cpp
src/auth/: fingerprint_authenticator.cpp  pam_authenticator.cpp
src/calendar/: calendar_cache.cpp  calendar_cache.h  calendar_service.cpp
src/capture/: screenshot_service.cpp  screenshot_service.h
src/config/: config_export.cpp  config_overrides.cpp  config_service.cpp  config_types.cpp  config_types.h  config_validate.cpp  widget_config.cpp
src/launcher/: dmenu_provider.h  emoji_provider.h  launcher_provider.h  math_provider.h  plugin_launcher_provider.cpp  plugin_launcher_provider.h
src/pipewire/: pipewire_service.cpp  pipewire_spectrum.cpp  wireplumber_mixer.cpp  wireplumber_mixer.h
src/scripting/: plugin_api.h  plugin_id.h  plugin_manifest.cpp  plugin_manifest.h  script_runtime.cpp  script_runtime.h  script_runtime_types.h
src/system/: brightness_service.cpp  (+7 more)
tests/: calendar_cache_permissions_test.cpp  config_schema_roundtrip_test.cpp  config_validate_cli_test.sh  config_widget_test.cpp  cpu_temp_sensor_test.cpp  plugin_manifest_test.cpp  triad_workspace_backend_test.cpp  ui_tree_reconciler_test.cpp
(+106 files in other folders)
