option('tests', type: 'feature', value: 'auto', description: 'Build unit tests (auto: on for unsanitized debug builds)')
option('jemalloc', type: 'feature', value: 'auto', description: 'Use jemalloc on glibc builds')
option('system_md4c', type: 'boolean', value: false, description: 'Use system md4c instead of vendored')
option('system_tomlplusplus', type: 'boolean', value: false, description: 'Use system tomlplusplus instead of vendored')
option('system_nlohmann_json', type: 'boolean', value: false, description: 'Use system nlohmann json instead of vendored')
option('stb_headers', type: 'string', value: 'third_party/stb', description: 'Path to stb header files')